--- a/studios/templates/base_generic.html
+++ b/studios/templates/base_generic.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary custom-navbar">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="{% url 'index' %}">
-                <i class="fas fa-paint-brush me-2"></i>
+                
                 <span class="navbar-brand-text">Design PRO</span>
             </a>
 
@@ -31,33 +31,33 @@
                     {% if user.is_authenticated %}
                         {% if user.is_staff %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'admin_applications' %}"><i class="fas fa-tachometer-alt me-1"></i> Панель администратора</a>
+                                <a class="nav-link" href="{% url 'admin_applications' %}"> Панель администратора</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'manage_categories' %}"><i class="fas fa-tags me-1"></i> Категории</a>
+                                <a class="nav-link" href="{% url 'manage_categories' %}">Категории</a>
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'my_applications' %}"><i class="fas fa-list me-1"></i> Мои заявки</a>
+                                <a class="nav-link" href="{% url 'my_applications' %}"> Мои заявки</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'create_application' %}"><i class="fas fa-plus me-1"></i> Создать заявку</a>
+                                <a class="nav-link" href="{% url 'create_application' %}">Создать заявку</a>
                             </li>
                         {% endif %}
                         <li class="nav-item">
                             <form action="{% url 'logout' %}" method="post" class="d-inline">
                                 {% csrf_token %}
                                 <button type="submit" class="nav-link btn btn-link text-light p-0 border-0">
-                                    <i class="fas fa-sign-out-alt me-1"></i> Выйти ({{ user.username }})
+                                     Выйти ({{ user.username }})
                                 </button>
                             </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}"><i class="fas fa-sign-in-alt me-1"></i> Вход</a>
+                            <a class="nav-link" href="{% url 'login' %}"> Вход</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'signup' %}"><i class="fas fa-user-plus me-1"></i> Регистрация</a>
+                            <a class="nav-link" href="{% url 'signup' %}"> Регистрация</a>
                         </li>
                     {% endif %}
                 </ul>
